<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/layoutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_app"
                android:textColor="@color/colorBlue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logoAppAbout"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_app"
                app:srcCompat="@drawable/logohotellist" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="HotelList"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_description"
                android:textColor="@color/colorBlue" />

            <TextView
                android:id="@+id/txtWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/website"
                android:textColorLink="@color/colorBlue"
                android:textIsSelectable="false"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_creator"
                android:textColor="@color/colorBlue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photoCreatorAbout"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photoprofile"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/email"
                android:textColorLink="@color/colorBlue" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>