<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/colorWhite"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageItemHotel"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_item_hotel"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/imageItemHotel"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNameHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/hotel_name"
            android:textColor="@color/colorBlue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icRating"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hotel_rating"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_rating" />

            <TextView
                android:id="@+id/txtRatingHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/hotel_rating"
                android:textColor="@color/colorBlue"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonLocationHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_hotel"
                android:padding="10dp"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_map"
                android:contentDescription="@string/map_hotel" />

            <ImageButton
                android:id="@+id/buttonWebsiteHotel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_hotel"
                android:padding="10dp"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_website"
                android:contentDescription="@string/website_hotel" />

            <ImageButton
                android:id="@+id/buttonDetailHotel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_hotel"
                android:padding="10dp"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_detail"
                android:contentDescription="@string/hotel_description" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>