<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hotel_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgHotel"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtNameHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/hotel_name"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/hotel_rating"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRatingHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/hotel_rating"
                android:textColor="@color/colorBlue" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:isIndicator="true"
                android:numStars="100"
                android:progressBackgroundTint="@color/colorAccent"
                android:progressTint="@color/colorBlue"
                android:secondaryProgressTint="@color/colorBlue" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/website_hotel"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWebsiteHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autoLink="web"
                android:text="@string/website_hotel"
                android:textColor="@color/colorBlue"
                android:textColorLink="@color/colorBlue" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/hotel_description"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDetailHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/hotel_description"
                android:textColor="@color/colorBlue" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/map_hotel"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonMapHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_hotel"
                android:contentDescription="@string/map_hotel"
                android:onClick="mapLocation"
                android:padding="10dp"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_map" />
        </LinearLayout>
    </RelativeLayout>


</ScrollView>